Added leaderboard styles for deskop

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,7 +4,7 @@
 @import "variables";
 @import "interior_pages";
 @import "cards";
-@import "leaderboard-desktop";
+@import "leaderboard";
 @import "intermediates";
 @import "reset";
 @import "surveys";
