--- a/app/views/games/_leaderboard_row.html.erb
+++ b/app/views/games/_leaderboard_row.html.erb
@@ -6,6 +6,6 @@
             <span class="leaderboard-rank"><%= record[0] %><span class="leaderboard__avatar" style="background-image: url('<%= record[1]["image"] %>'); "></span></span>
             <span class="leaderboard-user"><%= record[1]["name"] %></span>
             <span class="leaderboard-score"><%= record[1]["score"] %></span>
-        </div><!-- /.leaderboard-row__wrap -->
-    </div><!-- /.leaderboard-row -->
+        </div>
+    </div>
 <% end %>
