update to current user leaderboard style on desktop

--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -375,6 +375,10 @@ $falldown-font: #FEE2C7;
     .leaderboard-row {
         &.leaderboard-row--current-user {
             width: 90%;
+
+            .leaderboard-row__wrap {
+                width: 100%;
+            }
         }
     }
 
