--- a/app/views/games/_leaderboard_friends_row.html.erb
+++ b/app/views/games/_leaderboard_friends_row.html.erb
@@ -22,7 +22,7 @@
 
         <% if current_user.provider.blank? || leaderboard_ranks.size <= 3 %>
             <div class="leaderboard__social-share">
-                <h1 class="leaderboard__title">Things are looking a bit empty in here. Invite some friends to Luckee &amp; earn <span class="credits">25 credits</span> for every friend that signs up.</h1>
+                <h1 class="leaderboard__title">Things are looking a bit empty in here. Invite some friends to Luckee &amp; earn <span class="credits">25 credits</span> for every friend that signs up through your link.</h1>
 
                 <input placeholder="Your referral link" class="form-input" type="text" value="<%= request.host_with_port %>/invite/<%=current_user.referral %>">
 
