--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -34,9 +34,9 @@
             <%= render 'games/leaderboard_friends_row', leaderboard_version: 1 %>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug, version: 1, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
-                <%= render 'games/leaderboard_row', { leaderboard_type: "all-time", leaderboard_version: 1} %>
+                <%= render 'games/leaderboard_row', { leaderboard_type: "alltime", leaderboard_version: 1} %>
 
-                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "all-time", leaderboard_version: 1 } %>
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "alltime", leaderboard_version: 1 } %>
             </div>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug, version: 1, timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
@@ -53,9 +53,9 @@
             <%= render 'games/leaderboard_friends_row', leaderboard_version: 2 %>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug, version: 2, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
-                <%= render 'games/leaderboard_row', { leaderboard_type: "all-time", leaderboard_version: 2 } %>
+                <%= render 'games/leaderboard_row', { leaderboard_type: "alltime", leaderboard_version: 2 } %>
 
-                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "all-time", leaderboard_version: 2 } %>
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "alltime", leaderboard_version: 2 } %>
             </div>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug, version: 2, timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
@@ -73,9 +73,9 @@
             <%= render 'games/leaderboard_friends_row', leaderboard_version: 3 %>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug, version: 3, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
-                <%= render 'games/leaderboard_row', { leaderboard_type: "all-time", leaderboard_version: 3 } %>
+                <%= render 'games/leaderboard_row', { leaderboard_type: "alltime", leaderboard_version: 3 } %>
 
-                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "all-time", leaderboard_version: 3 } %>
+                <%= render 'games/leaderboard_current_user_row', { leaderboard_type: "alltime", leaderboard_version: 3 } %>
             </div>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug, version: 3, timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
@@ -91,9 +91,9 @@
         <%= render 'games/leaderboard_friends_row' %>
 
         <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
-            <%= render 'games/leaderboard_row', leaderboard_type: "all-time" %>
+            <%= render 'games/leaderboard_row', leaderboard_type: "alltime" %>
 
-            <%= render 'games/leaderboard_current_user_row', leaderboard_type: "all-time" %>
+            <%= render 'games/leaderboard_current_user_row', leaderboard_type: "alltime" %>
         </div> <!-- /.leaderboard--all-time -->
 
         <div class="tab-section js-tab-section leaderboard leaderboard--weekly <% if current_user_record({slug:@game.slug,timeframe:'weekly'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>"><!-- current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i > 10 -->
