--- a/app/views/static_pages/refer_mobile.html.erb
+++ b/app/views/static_pages/refer_mobile.html.erb
@@ -1,12 +1,17 @@
-<% provide(:title, 'Refer') %>
-<div class='my-balance'>
-  <p class="intro-copy" >When you invite a friend and they sign up through your personalized link, you earn <span class='credits'> 25 </span> credits!</p>
-  <div class="refer-friend">
-    <p class="redeemCredits__title">Copy &amp; Share:</p>
-    <p class="redeemCredits__link"><%= request.host_with_port %>/invite/<%=@referal_code %></p>
+<% content_for :body_class, "refer-page--mobile no-bg" %>
 
-    <div class="refer-friend__copy-button">
-      <button class="zclip" data-zclip-text="<%= request.host_with_port %>/invite/<%=@referal_code %>">Click to Copy</button>
+
+<% provide(:title, 'Refer') %>
+<div class="social-share">
+    <h1 class="social-share__title">Things are looking a bit empty in here. Invite some friends to Luckee &amp; earn <span class="credits">25 credits</span> for every friend that signs up through your link.</h1>
+
+    <input placeholder="Your referral link" class="form-input" type="text" value="<%= request.host_with_port %>/invite/<%=current_user.referral %>">
+
+    <div class="social-share__wrap">
+        <a href="https://www.facebook.com/dialog/feed?app_id=<%=ENV['FACEBOOK_KEY']%>&description=Check%20out%20Luckee%20and%20earn%20cash%20for%20playing%20free%20games&link=http%3A%2F%2Fwww.getluckee.com&name=Play%20free%20games.%20Earn%20real%20cash.&redirect_uri=<%=root_url%>" class="social-btn social-btn--fb"><i class="fa fa-facebook"></i></a>
+
+        <a href="http://twitter.com/home?status=Play%20free%20games.%20Earn%20real%20cash.%20www.getluckee.com%2Finvite%2F<%= current_user.referral %>" class="social-btn social-btn--twitter"><i class="fa fa-twitter"></i></a>
+
+        <a href="sms:12345678?body=TEXT" target="_top" class="social-btn social-btn--mail"><i class="fa fa-envelope"></i></a>
     </div>
-  </div>
 </div>
