added margin for ttrc leaderboard

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -83,7 +83,7 @@ body {
 
     &.refer-page--mobile {
         .mobile-container {
-            // height: calc(100vh - 110px);
+            height: calc(100vh - 110px);
         }
     }
 
