copy edit to mobile referral page

--- a/app/views/static_pages/refer_mobile.html.erb
+++ b/app/views/static_pages/refer_mobile.html.erb
@@ -3,7 +3,7 @@
 
 <% provide(:title, 'Refer') %>
 <div class="social-share">
-    <h1 class="social-share__title">Get paid just for telling your friends! Earn <span class="credits">25 credits</span> for every friend that signs up with your referral link.</h1>
+    <h1 class="social-share__title">Get paid just for telling your friends about Luckee! Earn <span class="credits">25 credits</span> for every friend that signs up with your referral link.</h1>
 
     <input placeholder="Your referral link" class="form-input" type="text" value="<%= request.host_with_port %>/invite/<%=current_user.referral %>">
 
