adding gold runner

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -25,8 +25,10 @@
       <%= render 'traffic_m' %>
     <% when 'tap-color' %>
       <%= render 'tap_color' %>      
+    <% when 'gold-runner' %>
+      <%= render 'gold_runner' %>  
   <% end %>
 
-<% if @game.slug != 'tap-color' %>
+<% if @game.slug == '2048' %>
   <input type="hidden" id="game_token" name="game_token" value="<%= session[:game_token] %>" />
 <% end %>
