--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -7,6 +7,7 @@
 @import "confirmation";
 @import "superslides";
 @import "intermediates";
+@import "interior-update";
 @import "buttons";
 @import "profiles";
 @import "forms";
@@ -39,7 +40,7 @@ html {
     }
 }
 .alert {
-    position: absolute;
+    position: fixed;
     display: inline-block;
     width: 100%;
     left: 0;
@@ -862,10 +863,6 @@ p {
             top: -10px;
         }
     }
-    position: relative;
-    top:-10px;
-    width:100%;
-    display:block;
     a:hover {
         text-decoration: none !important;
     }
@@ -899,8 +896,6 @@ p {
     a{
 
     }
-    height:10%;
-    background:#F2BB7C;
     .referral-link{
         position:absolute;
         right:15px;
