--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -39,7 +39,14 @@ $tw-blue: #2ab5ee;
 $blue-steel: #a5b0bd;
 $clouds: #ecf0f1;
 $black: #000;
+$dark-gray: #26272b;
 $white: #fff;
+$off-white: #fbf8f4;
+
+//icons
+$icon-orange: #f6c273;
+$icon-purple: #9a95e5;
+$icon-gray: #f4f4f4;
 
 // Breakpoints
 $iphone6: 376px;
