--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,21 +4,34 @@
 
 <div class='game-list-container'>
         <% @games.each do | g | %>
-        <%= link_to game_path(g) do %>
-        <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>">
+            <% if g.device_type != 5 || current_user.has_purchased_game(g.id) %>
+            <%= link_to game_path(g) do %>
+                <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>">
 
-                <%= image_tag(g.desktop_image, :class=>'game-image') %>
+                    <%= image_tag(g.desktop_image, :class=>'game-image') %>
 
+                    <div class="game__info">
+                        <h1 class="game__title"><%= g.name %></h1>
+                        <span class="credits">Earn Credits</span>
+                        <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" || g.slug == "tap-color" || g.slug == "2048" %>
+                            <img class="game__leaderboard" src="/assets/leaderboard_button.png">
+                        <% end %>
+                    </div>
 
-            <div class="game__info">
-                <h1 class="game__title"><%= g.name %></h1>
-                <span class="credits">Earn Credits</span>
-                <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" || g.slug == "tap-color" || g.slug == "2048" %>
-                    <img class="game__leaderboard" src="/assets/leaderboard_button.png">
-                <% end %>
-            </div>
+                </div> <!--/ .game-wrapper -->
+            <% end %>
+            <% else %>
+                <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>">
 
-        </div> <!--/ .game-wrapper -->
-        <% end %>
+                    <%= image_tag(g.desktop_image, :class=>'game-image') %>
+
+                    <div class="game__info">
+                        <h1 class="game__title"><%= g.name %></h1>
+                        <span class="credits">Purchase Game</span>
+                        <img class="game__leaderboard" src="/assets/leaderboard_button.png">
+                    </div>
+
+                </div> <!--/ .game-wrapper -->
+            <% end %>
         <% end %>
 </div>
