--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -2,6 +2,7 @@
 
     <div class='game-list-container'>
         <% @games.each do | g | %>
+            <% if g.device_type != 5 || current_user.has_purchased_game(g.id) %>
             <%= link_to game_path(g) do %>
                 <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
                     <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" || g.slug == "tap-color" || g.slug == "2048" %>
@@ -9,6 +10,12 @@
                     <% end %>
                 <%= image_tag(g.image, :class=>'game-image') %>
                 </div>
+            <% end %>
+            <% else %>
+                 <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
+                    <img class="game__leaderboard" src="/assets/leaderboard_button.png">
+                <%= image_tag(g.image, :class=>'game-image') %> Purchase Game
+                </div>           
             <% end %>
         <% end %>
     </div>
