--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -3,16 +3,17 @@
     <div class='game-list-container'>
         <% @games.each do | g | %>
             <% if g.device_type != 5 || current_user.has_purchased_game(g.id) %>
-            <%= link_to game_path(g) do %>
-                <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
-                <%= image_tag(g.image, :class=>'game-image') %>
-                </div>
-            <% end %>
+                <%= link_to game_path(g) do %>
+                    <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
+                    <%= image_tag(g.image, :class=>'game-image') %>
+                    </div>
+                <% end %>
             <% else %>
-                 <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
-                    <img class="game__leaderboard" src="/assets/leaderboard_button.png">
-                <%= image_tag(g.image, :class=>'game-image') %> Purchase Game
-                </div>           
+                <%= link_to unlock_game_path(g.slug) do %>
+                    <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
+                        <%= image_tag('game_lock.png', :class=>'game-image') %> Unlock Game
+                    </div>      
+                <% end %>     
             <% end %>
         <% end %>
     </div>
