added new style to game leaderboards page

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -340,11 +340,11 @@ textarea {
 }
 
 .bottom-nav__item--primary {
-    background-color: $dark-seafoam;
+    // background-color: $dark-seafoam;
 
-    &.active {
-        background-color: #16a085;
-    }
+    // &.active {
+    //     background-color: #16a085;
+    // }
 }
 
 .bottom-nav__item--leaderboard {
