--- a/app/views/surveys/index_mobile_new.html.erb
+++ b/app/views/surveys/index_mobile_new.html.erb
@@ -2,9 +2,9 @@
 
 <div class='list-page__container'>
     <section class="list-page__upper">
-        <img src="/assets/wave-short.png" class="wave">
-        <!-- <img src="/assets/wave.png" class="wave wave--2">
-        <img src="/assets/wave.png" class="wave wave--3"> -->
+        <img src="/assets/wave1.png" class="wave wave--1">
+        <img src="/assets/wave2.png" class="wave wave--2">
+        <img src="/assets/wave3.png" class="wave wave--3">
         <p class="list-page__title">Surveys</p>
         <%# embedded_svg('svgs/wave.svg', :class => 'wave') %>
     </section><!-- /.list-page__upper -->
