--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -10,10 +10,11 @@
                 <% end %>
             <% else %>
                 <%= link_to unlock_game_path(g.slug) do %>
-                    <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
-                        <%= image_tag('game_lock.png', :class=>'game-image') %> Unlock Game
-                    </div>      
-                <% end %>     
+                    <div class="game-wrapper--locked game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>" data-game-id="<%= g.id %>">
+                        <%= image_tag(g.image, :class=>'game-image') %>
+                        <img src="/assets/locked.png" class="locks">
+                    </div>
+                <% end %>
             <% end %>
         <% end %>
     </div>
